Mergeo Peticion Noviembre con trunk
git-svn-id: https://svn.scae.redsara.es/svn/sim/trunk@427 15075a66-5c5d-40c6-9c28-692553124c8e