@@ -28,14 +28,14 @@ public class PlataformaAppEditableTag extends BodyTagSupport{
     	 @SuppressWarnings("unchecked")
 		HashMap<Integer,Integer> mapPermisosAplicaciones =(HashMap<Integer, Integer>)pageContext.getSession().getAttribute(PlataformaMensajeriaUtil.MAP_PERMISOS_APLICACIONES); 
     	 String rolUsuario = (String)pageContext.getSession().getAttribute(PlataformaMensajeriaUtil.ROL_USUARIO_PLATAFORMA);
-    	 if(rolUsuario!=null&&rolUsuario.equals(PlataformaMensajeriaUtil.ROL_PROPIETARIO)){
-    	 	if(idAplicacion!=null&&!idAplicacion.equals("")&&mapPermisosAplicaciones!=null){
-	    		 Integer modoMap = mapPermisosAplicaciones.get(new Integer(idAplicacion));
+    	 if(rolUsuario!=null&&PlataformaMensajeriaUtil.ROL_PROPIETARIO.equals(rolUsuario)){
+    	 	if(idAplicacion!=null&&!"".equals(idAplicacion)&&mapPermisosAplicaciones!=null){
+	    		 Integer modoMap = mapPermisosAplicaciones.get(Integer.valueOf(idAplicacion));
 	    		 if(modoMap!=null&&modoMap.intValue()==2){
 	    			 skipBody=false;
 	    		 }
 	    	 }
-    	 }else  if(rolUsuario!=null&&(rolUsuario.equals(PlataformaMensajeriaUtil.ROL_ADMINISTRADOR)||rolUsuario.equals(PlataformaMensajeriaUtil.ROL_CAID))){
+    	 }else  if(rolUsuario!=null&&(PlataformaMensajeriaUtil.ROL_ADMINISTRADOR.equals(rolUsuario)||PlataformaMensajeriaUtil.ROL_CAID.equals(rolUsuario))){
     		 skipBody=false;
     	 }
          if(skipBody){
